# docflow-mcp

./: .gitignore  README.md  pyproject.toml
prompts/: decision.md  section.md  stale.md
src/docflow_mcp/: __init__.py  __main__.py  committer.py  config.py  plane_stale.py  reader.py  reviewer.py  scope.py  server.py  state.py
tests/: conftest.py  test_collection_header.py  test_committer.py  test_cross_scope_reads.py  test_git_modes.py  test_reader.py  test_review_flow.py  test_reviewer_parse.py  test_scope.py  test_state.py  test_workflow.py
