[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docflow-mcp"
version = "0.1.0"
description = "MCP server for agent-authored documentation with integrated review, state tracking, and multi-repo commit routing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "stateofthehart" }]
dependencies = [
    "fastmcp>=2.0",
    # httpx kept available because plane_stale.py uses it for Plane issue
    # filing. It is not required for the review path — docflow never calls
    # an LLM directly.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
docflow = "docflow_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docflow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
